# ouroboros-network

./: cabal.project  release.nix
.github/workflows/: build.yml
cardano-client/: cardano-client.cabal
cardano-client/src/Cardano/Client/: Subscription.hs
docs/network-spec/: miniprotocols.tex  network-spec.tex
nix/: default.nix  network-docs.nix  ouroboros-network.nix
nix/cells/automation/: pipelines.nix
ouroboros-consensus/: ouroboros-consensus.cabal
ouroboros-consensus-byron/: ouroboros-consensus-byron.cabal
ouroboros-consensus-byron-test/: ouroboros-consensus-byron-test.cabal
ouroboros-consensus-byron-test/src/Test/ThreadNet/Infra/Byron/: ProtocolInfo.hs  TrackUpdates.hs
ouroboros-consensus-byron-test/test/Test/ThreadNet/: DualByron.hs
ouroboros-consensus-cardano/: ouroboros-consensus-cardano.cabal
ouroboros-consensus-cardano-test/: ouroboros-consensus-cardano-test.cabal
ouroboros-consensus-cardano-test/test/Test/ThreadNet/: AllegraMary.hs  Cardano.hs  MaryAlonzo.hs  ShelleyAllegra.hs
ouroboros-consensus-cardano-tools/: ouroboros-consensus-cardano-tools.cabal
ouroboros-consensus-cardano/src/Ouroboros/Consensus/Cardano/: CanHardFork.hs
ouroboros-consensus-cardano/tools/db-analyser/: Analysis.hs  Documentation.md  HasAnalysis.hs  Main.hs
ouroboros-consensus-cardano/tools/db-analyser/Analysis/BenchmarkLedgerOps/: SlotDataPoint.hs
ouroboros-consensus-cardano/tools/db-analyser/Block/: Byron.hs  Cardano.hs  Shelley.hs
ouroboros-consensus-cardano/tools/db-analyser/scripts/: plot-ledger-ops-cost.gp
ouroboros-consensus-cardano/tools/ledger-db-backends-checker/: Main.hs
ouroboros-consensus-mock/: ouroboros-consensus-mock.cabal
ouroboros-consensus-mock-test/: ouroboros-consensus-mock-test.cabal
ouroboros-consensus-mock/src/Ouroboros/Consensus/Mock/Ledger/: Block.hs
ouroboros-consensus-mock/src/Ouroboros/Consensus/Mock/Node/: Praos.hs  PraosRule.hs
ouroboros-consensus-shelley/: ouroboros-consensus-shelley.cabal
ouroboros-consensus-shelley-test/: ouroboros-consensus-shelley-test.cabal
ouroboros-consensus-shelley-test/src/Test/ThreadNet/TxGen/: Shelley.hs
ouroboros-consensus-test/: ouroboros-consensus-test.cabal
ouroboros-consensus-test/src/Test/ThreadNet/: Network.hs
ouroboros-consensus-test/src/Test/Util/: RefEnv.hs  TestBlock.hs
ouroboros-consensus-test/src/Test/Util/Orphans/: NFData.hs
ouroboros-consensus-test/test-consensus/Test/Consensus/: Mempool.hs
ouroboros-consensus-test/test-consensus/Test/Consensus/HardFork/: Combinator.hs
ouroboros-consensus-test/test-consensus/Test/Consensus/Mempool/: Block.hs
ouroboros-consensus-test/test-storage/Test/Ouroboros/Storage/: TestBlock.hs
ouroboros-consensus/src/Ouroboros/Consensus/: HeaderStateHistory.hs  NodeKernel.hs
ouroboros-consensus/src/Ouroboros/Consensus/Ledger/: Abstract.hs  Basics.hs  SupportsPeerSelection.hs
ouroboros-consensus/src/Ouroboros/Consensus/Mempool/: API.hs  Impl.hs
ouroboros-consensus/src/Ouroboros/Consensus/Network/: NodeToNode.hs
ouroboros-consensus/src/Ouroboros/Consensus/Util/: Condense.hs
ouroboros-network/: CHANGELOG.md  ouroboros-network.cabal
ouroboros-network-api/: ouroboros-network-api.cabal
ouroboros-network-api/src/Ouroboros/Network/: SizeInBytes.hs
ouroboros-network-api/src/Ouroboros/Network/NodeToNode/: Version.hs
ouroboros-network-api/src/Ouroboros/Network/Protocol/: Limits.hs
ouroboros-network-api/src/Ouroboros/Network/Util/: ShowProxy.hs
ouroboros-network-framework/: ouroboros-network-framework.cabal
ouroboros-network-framework/demo/: connection-manager.hs
ouroboros-network-framework/src/Ouroboros/Network/: ConnectionHandler.hs  InboundGovernor.hs  Server2.hs  Snocket.hs  Socket.hs
ouroboros-network-framework/src/Ouroboros/Network/ConnectionManager/: Core.hs
ouroboros-network-framework/src/Ouroboros/Network/InboundGovernor/: Event.hs
ouroboros-network-framework/src/Ouroboros/Network/NodeToClient/: Version.hs
ouroboros-network-framework/src/Ouroboros/Network/Subscription/: Worker.hs
ouroboros-network-framework/test/Test/Ouroboros/Network/: Server2.hs
ouroboros-network-mock/: ouroboros-network-mock.cabal
ouroboros-network-mock/src/Ouroboros/Network/Mock/: ConcreteBlock.hs
ouroboros-network-protocols/: ouroboros-network-protocols.cabal
ouroboros-network-protocols-test/: ouroboros-network-protocols-test.cabal
ouroboros-network-protocols-test/src/Test/: ChainGenerators.hs  ChainProducerState.hs
ouroboros-network-protocols-test/test-cddl/: Main.hs
ouroboros-network-protocols-test/test/Test/: Chain.hs
ouroboros-network-protocols/src/Ouroboros/Network/Protocol/ChainSync/: Codec.hs
ouroboros-network/demo/: chain-sync.hs
ouroboros-network/sim-tests-lib/Test/Ouroboros/Network/: PeerSelection.hs  Testnet.hs
ouroboros-network/src/Ouroboros/Network/: BlockFetch.hs  KeepAlive.hs  NodeToNode.hs  PeerSharing.hs
ouroboros-network/src/Ouroboros/Network/BlockFetch/: Client.hs  ClientRegistry.hs  ClientState.hs  Decision.hs
ouroboros-network/src/Ouroboros/Network/Diffusion/: P2P.hs
ouroboros-network/src/Ouroboros/Network/NodeToNode/: Version.hs
ouroboros-network/src/Ouroboros/Network/PeerSelection/: Governor.hs  KnownPeers.hs  LedgerPeers.hs  PeerStateActions.hs  Simple.hs  Types.hs
ouroboros-network/src/Ouroboros/Network/TxSubmission/: Inbound.hs
ouroboros-network/test-cddl/: Main.hs
ouroboros-network/test-cddl/specs/: peer-sharing.cddl
ouroboros-network/test/Ouroboros/Network/: MockNode.hs
ouroboros-network/test/Ouroboros/Network/BlockFetch/: Examples.hs
ouroboros-network/test/Test/: Mux.hs  Pipe.hs  Socket.hs
ouroboros-network/test/Test/Ouroboros/Network/: BlockFetch.hs  MockNode.hs  Orphans.hs  PeerSelection.hs  Testnet.hs
ouroboros-node/: ouroboros-node.cabal
ouroboros-node/src/Ouroboros/Consensus/Network/: NodeToNode.hs
scripts/ci/: check-stylish-network.sh  check-stylish.sh
(+45 files in other folders)
