cabal-version:       3.0
name:                ouroboros-network-protocols
version:             0.2.0.0
synopsis:            Ouroboros Network Protocols
-- description:
license:             Apache-2.0
license-files:
  LICENSE
  NOTICE
copyright:           2019-2022 Input Output (Hong Kong) Ltd.
author:              Alexander Vieth, Marcin Szamotulski, Duncan Coutts
maintainer:
category:            Network
build-type:          Simple
extra-source-files:
  ChangeLog.md

flag asserts
  description: Enable assertions
  manual:      False
  default:     False

source-repository head
  type:     git
  location: https://github.com/input-output-hk/ouroboros-network

library
  hs-source-dirs:      src

  -- At this experiment/prototype stage everything is exposed.
  -- This has to be tidied up once the design becomes clear.
  exposed-modules:
                       Ouroboros.Network.Protocol.ChainSync.Client
                       Ouroboros.Network.Protocol.ChainSync.ClientPipelined
                       Ouroboros.Network.Protocol.ChainSync.Codec
                       Ouroboros.Network.Protocol.ChainSync.Server
                       Ouroboros.Network.Protocol.ChainSync.Type
                       Ouroboros.Network.Protocol.ChainSync.PipelineDecision
                       Ouroboros.Network.Protocol.BlockFetch.Type
                       Ouroboros.Network.Protocol.BlockFetch.Client
                       Ouroboros.Network.Protocol.BlockFetch.Server
                       Ouroboros.Network.Protocol.BlockFetch.Codec
                       Ouroboros.Network.Protocol.LocalStateQuery.Client
                       Ouroboros.Network.Protocol.LocalStateQuery.Codec
                       Ouroboros.Network.Protocol.LocalStateQuery.Server
                       Ouroboros.Network.Protocol.LocalStateQuery.Type
                       Ouroboros.Network.Protocol.LocalTxMonitor.Type
                       Ouroboros.Network.Protocol.LocalTxMonitor.Client
                       Ouroboros.Network.Protocol.LocalTxMonitor.Server
                       Ouroboros.Network.Protocol.LocalTxMonitor.Codec
                       Ouroboros.Network.Protocol.TxSubmission2.Type
                       Ouroboros.Network.Protocol.TxSubmission2.Codec
                       Ouroboros.Network.Protocol.TxSubmission2.Client
                       Ouroboros.Network.Protocol.TxSubmission2.Server
                       Ouroboros.Network.Protocol.LocalTxSubmission.Type
                       Ouroboros.Network.Protocol.LocalTxSubmission.Client
                       Ouroboros.Network.Protocol.LocalTxSubmission.Server
                       Ouroboros.Network.Protocol.LocalTxSubmission.Codec
                       Ouroboros.Network.Protocol.KeepAlive.Type
                       Ouroboros.Network.Protocol.KeepAlive.Client
                       Ouroboros.Network.Protocol.KeepAlive.Server
                       Ouroboros.Network.Protocol.KeepAlive.Codec

  default-language:    Haskell2010
  other-extensions:    BangPatterns,
                       DataKinds,
                       EmptyCase,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GADTs,
                       GADTSyntax,
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NamedFieldPuns,
                       OverloadedStrings,
                       PolyKinds,
                       RankNTypes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       TemplateHaskell,
                       TupleSections,
                       TypeApplications,
                       TypeFamilies,
                       TypeInType

  build-depends:       base              >=4.9 && <4.15,
                       aeson,
                       async             >=2.2 && <2.3,
                       base16-bytestring,
                       bytestring        >=0.10 && <0.11,
                       cborg             >=0.2.1 && <0.3,
                       containers,
                       deepseq,
                       directory,
                       dns,
                       fingertree        >=0.1.4.2 && <0.2,
                       mtl,
                       nothunks,
                       network           >=3.1.2 && <3.2,
                       pretty-simple,
                       psqueues          >=0.2.3 && <0.3,
                       serialise         >=0.2   && <0.3,
                       random,
                       cardano-strict-containers,

                       cardano-binary,
                       cardano-prelude,
                       cardano-slotting,
                       contra-tracer,
                       monoidal-synchronisation,

                       io-classes       ^>=0.3,
                       strict-stm       ^>=0.2,
                       ouroboros-network-api,
                       typed-protocols   >=0.1 && <1.0,
                       typed-protocols-cborg
                                         >=0.1 && <1.0

  ghc-options:         -Wall
                       -Wno-unticked-promoted-constructors
                       -Wcompat
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wpartial-fields
                       -Widentities
                       -Wredundant-constraints
  if flag(asserts)
    ghc-options:       -fno-ignore-asserts

  build-depends:       hashable          >=1.2 && <1.4,
                       text              >=1.2 && <1.3,
                       time              >=1.9.1 && <1.11
